# git-tooling

./: .flake8  .gitignore  .license-header.txt  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  README.md  dev-requirements.txt  pyproject.toml
src/example_package/: __init__.py  big_feature.py  hello_world.py
tests/: __init__.py  test_example_package.py  test_git_tooling.py
