[tool.poetry]
name = "example-package"
version = "0.0.0"
description = "Imagine this has some actual code in it"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
types-PyYAML = "^6.0.9"
python-semantic-release = "^7.29.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = [
    "src/example_package/__init__.py:__version__",
]
version_toml = "pyproject.toml:tool.poetry.version"
branch = "main"
upload_to_pypi = false
upload_to_repository = false
upload_to_release = true
build_command = "pip install poetry && poetry build"


[tool.isort]
profile = "black"
src_paths = ["src"]
known_first_party = "example_package"
known_third_party = []
combine_as_imports = true
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.bandit]
targets = ["src"]


[tool.pylint.messages_control]
max-line-length = 100
disable = ["import-error"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra", "--cache-clear", "--cov=src/example_package", "--cov-report", "html:coverage-html", "--cov-report", "term"]
pythonpath = ["src"]
python_files = ["*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
junit_logging = "all"
junit_log_passing_tests = true
junit_suite_name = "example-package"
log_cli = true
log_cli_level = "WARNING"
log_auto_indent = true
log_date_format = "%Y-%m-%d %H:%M:%S"
log_file = "pytest-log.log"
log_file_level = "INFO"
log_format = "[%(asctime)s] %(name)s %(levelname)s %(funcName)s: %(message)s"
minversion = "6.2"
markers = [
    "slow: Slow tests",
]

[tool.mypy]
python_version=3.7

mypy_path="src"

show_column_numbers=true
show_error_context=true
pretty=true
error_summary=true

follow_imports="normal"
ignore_missing_imports=true

disallow_untyped_calls=true
warn_return_any=true
strict_optional=true
warn_no_return=true
warn_redundant_casts=true
warn_unused_ignores=true
warn_unused_configs=true
disallow_any_generics=true

warn_unreachable=true
disallow_untyped_defs=true
check_untyped_defs=true

cache_dir="/dev/null"

[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true
allow_incomplete_defs = true
allow_untyped_calls = true
